--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,6 @@
 
 <!--<app-counter></app-counter>-->
 <!--<app-hero></app-hero>-->
-<app-heroes-list></app-heroes-list>
+<!--<app-heroes-list></app-heroes-list>-->
+
+<app-datalist></app-datalist>
