--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,29 @@
-<h1>{{ title }}</h1>
-<hr>
-
 <!--<app-counter></app-counter>-->
 <!--<app-hero></app-hero>-->
 <!--<app-heroes-list></app-heroes-list>-->
 
-<app-datalist></app-datalist>
+<!-- <app-add-category></app-add-category> -->
+<!-- <app-datalist></app-datalist> -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a href="#" class="navbar-brand">{{ title }}</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a routerLink="expenses" class="nav-link">Gastos</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="categories" class="nav-link">Categorias</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div>
+    <div class="container mt-3">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
