--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,24 +6,26 @@
 <!-- <app-datalist></app-datalist> -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a href="#" class="navbar-brand">{{ title }}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a routerLink="expenses" class="nav-link">Gastos</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="categories" class="nav-link">Categorias</a>
-      </li>
-    </ul>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">{{ title }}</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="expenses" aria-current="page" href="#">Gastos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="categories" href="#">Categorias</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 
 <div>
-    <div class="container mt-3">
+    <div class="container">
       <router-outlet></router-outlet>
     </div>
-  </div>
+</div>
