--- a/src/app/datalist/datalist.component.html
+++ b/src/app/datalist/datalist.component.html
@@ -1,4 +1,5 @@
-<table class="table">
+<h3>Lista de categorias</h3>
+<table class="table table-striped">
   <thead>
     <tr>
       <th scope="col">Tag</th>
